# fastapi-boilerplate

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
TodoApp/: alembic.ini  config.py  database.py  dependencies.py  domain.py  main.py  models.py
TodoApp/alembic/: env.py
TodoApp/core/: errors.py  security.py
TodoApp/middleware/: logging.py
TodoApp/repositories/: interfaces.py  todo_repository.py  user_repository.py
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
TodoApp/schemas/: auth.py  todo.py  user.py
TodoApp/services/: auth_service.py  todo_service.py  user_service.py
TodoApp/test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_refresh_token_table.py  bc6d3dfac8a9_create_user_table.py  e5f6a7b8c9d0_add_is_admin_to_user.py
docs/: 2-validation_and_exceptions.md  architecture.md  auth_and_alembic.md  boilerplate_guide.md  crud_service_db.md  database.md  fastapi_deep_dive.md  fastapi_mastery_roadmap.md  learning_guide.md  parameters.md  secrets_runbook.md  user_guide.md
scripts/: make_admin.py  seed_books.py
src/: config.py  dependencies.py  exceptions.py  kafka.py  logging_config.py  main.py  middleware.py  ratelimit.py  schemas.py
src/activity/: consumer.py  router.py  schema.py  service.py
src/auth/: dependencies.py  model.py  router.py  schema.py  service.py  utils.py
src/books/: book_data.py  model.py  router.py  schema.py  service.py
src/db/: main.py  mongo.py
tests/: conftest.py  test_auth.py  test_books.py
