[project]
name = "fastapi-boilerplate"
version = "1.0.0"
description = "Production-grade FastAPI boilerplate — layered architecture, JWT, rate limiting, structured logging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    # ORM
    "sqlalchemy>=2.0.0",
    # Settings from environment / .env files
    "pydantic-settings>=2.0.0",
    # JWT
    "python-jose[cryptography]>=3.3.0",
    # Password hashing
    "passlib[bcrypt]>=1.7.4",
    # Rate limiting
    "slowapi>=0.1.9",
    # Migrations
    "alembic>=1.13.0",
    # PostgreSQL driver (async-compatible sync driver; swap for asyncpg if using async SQLAlchemy)
    "psycopg2-binary>=2.9.0",
    "bcrypt<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["TodoApp/test"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["TodoApp"]
